Archive/f29d65bbb14364b8b7227670a30221a8-8a676986784bd3a58ce3ec015645a41f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:7:1: error: invalid use of template-name 'C' without an argument list
 C::C(){}
 ^
